--- a/simpleCalculator.html
+++ b/simpleCalculator.html
@@ -3,7 +3,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <title>Web Calculator</title>
-        <link rel="stylesheet" href="calculator.css">
+        <link rel="stylesheet" href="simpleCalculator.css">
     </head>
     <body>
         <h1>Online Web Calculator</h1>
@@ -36,6 +36,6 @@
             </div>
         </div>
         
-        <script type="text/javascript" src="calculator.js"></script>
+        <script type="text/javascript" src="simpleCalculator.js"></script>
     </body>
 </html>
