Altering the button of "C/CE"
When looking at a basic calculator online, I found websites where clicking the C/CE button changes when there's an input into the calculator or the display screen had been cleared. So I made changes to make this calculator appear this way!

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <input type="button" value="2" onclick="addDigit(2)" class="btn-numbers"/>
                 <input type="button" value="3" onclick="addDigit(3)" class="btn-numbers"/>
                 <input type="button" value="+" onclick="addition()" class="btn-operators"/>                
-                <input type="button" value="C/CE" onclick="reset()" class="btn-operators"/>
+                <input type="button" value="CE" onclick="reset()" class="btn-operators" id="C_CE"/>
                 <br>
                 <input type="button" value="4" onclick="addDigit(4)" class="btn-numbers"/>
                 <input type="button" value="5" onclick="addDigit(5)" class="btn-numbers"/>
