Modified the reset() and percentage() functions
When playing with the "C" and "CE" buttons, I encountered times when "C" was clicked but didn't change to "CE". To fix this issue I changed the if-condition checking if button displays "CE". This way when ever the button is clicked by the user, the code line 'C_CE = 'CE'" is always executed while variable "a" remains the same whenever "C" is clicked.

Also Made changes to the percentage "%" button by leaving the button blue when clicked to indicate that the calculator will calculate percentage when clicking operate!

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <input type="button" value="5" onclick="addDigit(5)" class="btn-numbers"/>
                 <input type="button" value="6" onclick="addDigit(6)" class="btn-numbers"/>
                 <input type="button" value="-" onclick="subtraction()" class="btn-operators"/>                
-                <input type="button" value="%" onclick="percentage()" class="btn-operators"/>
+                <input type="button" value="%" onclick="percentage()" class="btn-operators" id="percentage"/>
                 <br>
                 <input type="button" value="7" onclick="addDigit(7)" class="btn-numbers"/>
                 <input type="button" value="8" onclick="addDigit(8)" class="btn-numbers"/>
